# openstack

./: .gitignore  .readthedocs.yaml  README.en.md  README.md  mkdocs.yml
tools/oos/: README.md  requirement.txt  requirements.txt  setup.cfg  setup.py
tools/oos/etc/: constants.yaml  oos.conf  openeuler_repo  openeuler_repo.yaml  openeuler_sig_repo.yaml  openstack_release.yaml  openstack_sig_repo  package.spec.j2  spec_constants.yaml  verify-constants.py
tools/oos/etc/inventory/: all_in_one.yaml  cluster.yaml  oos_inventory.j2  oos_inventory.py
tools/oos/etc/key_pair/: id_rsa  id_rsa.pub
tools/oos/etc/playbooks/: aodh.yaml  ceilometer.yaml  cinder.yaml  cleanup.yaml  cyborg.yaml  entry.yaml  glance.yaml  gnocchi.yaml  heat.yaml  horizon.yaml  init.yaml  keystone.yaml  kolla.yaml  mariadb.yaml  memcached.yaml  neutron.yaml  nova.yaml  placement.yaml  pre.yaml  pre_install.yaml  rabbitmq.yaml  rally.yaml  swift.yaml  tempest.yaml  test.yaml  trove.yaml
tools/oos/example/: README.md
tools/oos/example/openstack-wallaby/: README.md  failed_cache.txt  openeuler_repo  result.csv  upper.json
tools/oos/example/train_cached_file/: Babel.json  CouchDB.json  Cython.json  Django.json  Flask-RESTful.json  Flask.json  GitPython.json  Jinja2.json  MarkupSafe.json  Paste.json  PasteDeploy.json  Pint.json  PrettyTable.json  PyECLib.json  PyJWT.json  PyMySQL.json  PySocks.json  PyYAML.json  Pygments.json  Routes.json  SQLAlchemy-Utils.json  SQLAlchemy.json  (+485 more)
tools/oos/oos/: cli.py  constants.py  utils.py
tools/oos/scripts/: README.md  check_obs_status.py  check_openstack_ci_status.py  check_openstack_sig_pr.py  fetch_openeuler_repo_name.py  fetch_openstack_release_mapping.py  fetch_openstack_sig_repo_name.py  fetch_src_openeuler_repo_name.py  generate_dependence.py
tools/oos/test/: test_cli.py
(+1404 files in other folders)
