[metadata]
name = oos
summary = The command line tool for openEuler OpenStack SIG
description-file =
    README.md
long_description_content_type = text/markdown
author = openEuler OpenStack SIG
home-page = https://gitee.com/openeuler/openstack/
python-requires = >=3.7
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[pbr]
warnerrors = True

[files]
data_files =
    etc/oos = etc/*
    etc/oos/playbooks = etc/playbooks/*
    etc/oos/inventory = etc/inventory/*

[entry_points]
console_scripts =
    oos = oos.cli:main

[wheel]
universal = 1
